# playground

./: .eslintrc.js  .gitignore  .prettierrc.yaml  Cargo.toml  README.md  go.mod  package.json  tsconfig.json
babysnark/: babysnark.py  ssbls12.py
babysnark/finitefield/: euclidean.py  finitefield.py  modp.py  numbertype.py  polynomial.py
circom/: multiplier2_0000.zkey  multiplier2_0001.zkey  pot12_0001.ptau  proof.json  verification_key.json  verifier.js  verifier.sol
circom/multiplier_cpp/: multiplier  multiplier.cpp
circom/multiplier_js/: multiplier.wasm
dev/: new-eth-account.ts
eth2.0/: .gitignore
eth2.0/testnet/: .gitignore  beacon.yaml  create-account.sh  create-account.yaml  docker-compose.yaml  gen-jwt-hex.sh  list-account.yaml  start-geth.sh  validator.yaml
gcd/: main.go
wordle/: Cargo.toml
wordle/src/: is_zero.rs  lib.rs  table.rs  utils.rs  wordle.rs
zkp/: main.go
zksnark/: code_2_r1cs.py  r1cs_2_qap.py
