[package]
name = "wordle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
halo2 = { package = "halo2_proofs", git = "https://github.com/privacy-scaling-explorations/halo2", tag = "v2022_09_10" }
group = "0.12"
serde = { version = "1.0.138", features = ["derive"]}
serde_json = {version = "1.0.82"}
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
rand_core = { version = "0.6", default-features = false, features = ["getrandom"]}
